# nextcloud-taskviewer

./: .gitignore  FUTURE_ENHANCEMENTS.md  README.md  pyproject.toml  requirements.txt
backend/: README.md  models.py  pyproject.toml  requirements.txt  setup.py
backend/src/: main.py
backend/src/api/routers/: auth.py  sync.py  tasks.py
backend/src/services/: task_service.py
backend/src/utils/: database.py
frontend/: cache_manager.py  connection_handler.py  credential_manager.py  main.py  task_parser.py  ui_components.py
