[project]
name = "nextcloud-task-suite"
version = "1.0.0"
description = "Complete suite for Nextcloud task management with backend and frontend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "caldav>=2.0.1",
    "niquests>=0.4.0",
    "ttkbootstrap>=1.20.1",
    "vobject>=0.9.9",
    "requests>=2.31.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
task-backend = "backend.main:main"
task-frontend = "frontend:main"
taskviewer = "main:main"  # Keep original for backward compatibility

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
