[project]
name = "nextcloud-task-backend"
version = "1.0.0"
description = "Backend service for Nextcloud task synchronization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "caldav>=2.0.1",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
backend = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"